--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
     "expo": "~54.0.32",
+    "expo-constants": "^18.0.13",
     "expo-file-system": "^19.0.21",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^11.10.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
